style change on contact, and fix of some mobile stuff. Still working on a bug with the scroll event on mobile

--- a/css/vend-lease.webflow.css
+++ b/css/vend-lease.webflow.css
@@ -396,7 +396,6 @@
 }
 
 .contact-form-container {
-  margin-top: -23px;
   padding-left: 10%;
 }
 
